[gd_scene load_steps=28 format=3 uid="uid://br5yd5mio14gs"]

[ext_resource type="Script" path="res://game_controller.gd" id="1_30ppm"]
[ext_resource type="Texture2D" uid="uid://c48ioebxkdcpx" path="res://sprites/Cenário provisório.png" id="1_ba5qy"]
[ext_resource type="Script" path="res://scripts/level_controller.gd" id="1_uxhoy"]
[ext_resource type="PackedScene" uid="uid://wpcf6xa2nnpu" path="res://atores/Player.tscn" id="2_n6bd1"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="3_aqw04"]
[ext_resource type="Script" path="res://scripts/ui_main.gd" id="4_mfwdc"]
[ext_resource type="Texture2D" uid="uid://s6bw2ym060ru" path="res://sprites/hpOutline.png" id="4_qh7wr"]
[ext_resource type="PackedScene" uid="uid://dgfcd60jf7y6s" path="res://item/Drink.tscn" id="5_22qpw"]
[ext_resource type="PackedScene" uid="uid://p1lwcpw08oc" path="res://cenas/tiles_fases1.tscn" id="5_tgukn"]
[ext_resource type="Texture2D" uid="uid://b1qyvb22ojkov" path="res://sprites/hpInfill.png" id="5_w1ke8"]
[ext_resource type="PackedScene" uid="uid://d02c4ggx4ko4k" path="res://atores/Goblin.tscn" id="6_w7dak"]
[ext_resource type="Script" path="res://scripts/spawn_enemy.gd" id="8_fhf3t"]
[ext_resource type="PackedScene" uid="uid://gttj4e2kv6rt" path="res://cenas/MenuGameOver.tscn" id="10_m3ecr"]
[ext_resource type="PackedScene" uid="uid://cf8ittwei61qg" path="res://cenas/MenuPause.tscn" id="10_nu8t0"]
[ext_resource type="PackedScene" uid="uid://chpm7amb52gwb" path="res://atores/Boss1.tscn" id="13_4qb2y"]
[ext_resource type="Script" path="res://scripts/parallax_background.gd" id="14_8tmhg"]
[ext_resource type="Texture2D" uid="uid://dmy20rpqvy7o1" path="res://sprites/foreground.png" id="14_a2xc8"]
[ext_resource type="Texture2D" uid="uid://cx7gcqqtns0tm" path="res://sprites/pedro1.png" id="15_mlyws"]
[ext_resource type="Texture2D" uid="uid://bgsv5x1rxma67" path="res://sprites/midground.png" id="15_trfxh"]
[ext_resource type="Texture2D" uid="uid://xtmbetd6y3nv" path="res://sprites/background.png" id="16_mlxwt"]
[ext_resource type="AudioStream" uid="uid://0yvjgyty4yw3" path="res://audio/bgm_action_3.mp3" id="18_py83u"]

[sub_resource type="ViewportTexture" id="ViewportTexture_h4eg3"]
viewport_path = NodePath("Node3D/SubViewport")

[sub_resource type="PlaneMesh" id="PlaneMesh_vmd1h"]
size = Vector2(4, 10)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_2g513"]
data = PackedVector3Array(2, 0, 5, -2, 0, 5, 2, 0, -5, -2, 0, 5, -2, 0, -5, 2, 0, -5)

[sub_resource type="BoxMesh" id="BoxMesh_54bg6"]
size = Vector3(4, 1, 0.1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_v6iyh"]
data = PackedVector3Array(-2, 0.5, 0.05, 2, 0.5, 0.05, -2, -0.5, 0.05, 2, 0.5, 0.05, 2, -0.5, 0.05, -2, -0.5, 0.05, 2, 0.5, -0.05, -2, 0.5, -0.05, 2, -0.5, -0.05, -2, 0.5, -0.05, -2, -0.5, -0.05, 2, -0.5, -0.05, 2, 0.5, 0.05, 2, 0.5, -0.05, 2, -0.5, 0.05, 2, 0.5, -0.05, 2, -0.5, -0.05, 2, -0.5, 0.05, -2, 0.5, -0.05, -2, 0.5, 0.05, -2, -0.5, -0.05, -2, 0.5, 0.05, -2, -0.5, 0.05, -2, -0.5, -0.05, 2, 0.5, 0.05, -2, 0.5, 0.05, 2, 0.5, -0.05, -2, 0.5, 0.05, -2, 0.5, -0.05, 2, 0.5, -0.05, -2, -0.5, 0.05, 2, -0.5, 0.05, -2, -0.5, -0.05, 2, -0.5, 0.05, 2, -0.5, -0.05, -2, -0.5, -0.05)

[sub_resource type="BoxShape3D" id="BoxShape3D_bfiha"]
size = Vector3(0.0942383, 1.41895, 1.20081)

[node name="Fase 1" type="Node3D"]
script = ExtResource("1_uxhoy")

[node name="GameController" type="Node" parent="." node_paths=PackedStringArray("_player", "_camera", "_ui_main", "_level_controller")]
script = ExtResource("1_30ppm")
_player = NodePath("../Player")
_camera = NodePath("../Camera")
_ui_main = NodePath("../UIMain")
_level_controller = NodePath("..")

[node name="UIMain" type="CanvasLayer" parent="."]
script = ExtResource("4_mfwdc")

[node name="Player" type="Control" parent="UIMain"]
layout_mode = 3
anchors_preset = 0
offset_right = 385.0
offset_bottom = 50.0
metadata/_edit_use_anchors_ = true

[node name="Health" type="TextureProgressBar" parent="UIMain/Player"]
layout_mode = 0
offset_left = 30.0
offset_top = 15.0
offset_right = 247.0
offset_bottom = 71.0
value = 100.0
texture_under = ExtResource("4_qh7wr")
texture_progress = ExtResource("5_w1ke8")
texture_progress_offset = Vector2(42, 21)

[node name="Cenario" type="Sprite3D" parent="."]
transform = Transform3D(6, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, 7.73711, 0.551879, -1.02439)
visible = false
texture_filter = 0
texture = ExtResource("1_ba5qy")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, 3.07677, 0.101879, -1.02439)

[node name="SubViewport" type="SubViewport" parent="Node3D"]
size = Vector2i(1100, 45)

[node name="Node2D" parent="Node3D/SubViewport" instance=ExtResource("5_tgukn")]

[node name="Sprite3D" type="Sprite3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.843767, 0.128161, 7.45058e-09)
texture_filter = 0
texture = SubResource("ViewportTexture_h4eg3")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, -0.60107, 1.89088, 1.71161)
projection = 1
current = true
script = ExtResource("3_aqw04")

[node name="Chão" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 1, -0.00107002, 0.583521, 2.14718)
visible = false
mesh = SubResource("PlaneMesh_vmd1h")

[node name="StaticBody3D" type="StaticBody3D" parent="Chão"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Chão/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_2g513")

[node name="Parede" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 1, 0.00155735, 0.991954, -0.806065)
visible = false
mesh = SubResource("BoxMesh_54bg6")

[node name="StaticBody3D" type="StaticBody3D" parent="Parede"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_v6iyh")

[node name="Player" parent="." instance=ExtResource("2_n6bd1")]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, -1.21107, 0.601879, -0.683394)

[node name="Parede2" type="MeshInstance3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 1, -0.00107002, 1.06186, 0.246704)
visible = false
mesh = SubResource("BoxMesh_54bg6")

[node name="StaticBody3D" type="StaticBody3D" parent="Parede2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Parede2/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_v6iyh")

[node name="Drink" parent="." instance=ExtResource("5_22qpw")]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, -0.85107, 0.591879, -0.024394)

[node name="SpawnEnemy" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00107002, 0.0518789, -0.016394)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_fhf3t")
unclocked_at_area = 2.0
amount = 4
enemies = Array[PackedScene]([ExtResource("6_w7dak")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnEnemy"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.777, -0.232)
shape = SubResource("BoxShape3D_bfiha")

[node name="SpawnEnemy2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99893, 0.0518789, -0.024394)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_fhf3t")
unclocked_at_area = 4.0
amount = 6
enemies = Array[PackedScene]([ExtResource("6_w7dak")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnEnemy2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0899994, 0.777, -0.243709)
shape = SubResource("BoxShape3D_bfiha")

[node name="SpawnEnemy3" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.99893, 0.0518789, -0.024394)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_fhf3t")
unclocked_at_area = 6.0
amount = 10
enemies = Array[PackedScene]([ExtResource("6_w7dak")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnEnemy3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.777, -0.232)
shape = SubResource("BoxShape3D_bfiha")

[node name="SpawnEnemy4" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.99893, 0.0518789, -0.024394)
collision_layer = 0
collision_mask = 2
script = ExtResource("8_fhf3t")
unclocked_at_area = 9.0
amount = 1
enemies = Array[PackedScene]([ExtResource("13_4qb2y")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpawnEnemy4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.777, -0.232)
shape = SubResource("BoxShape3D_bfiha")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("10_nu8t0")]
metadata/_edit_use_anchors_ = true

[node name="Control2" parent="CanvasLayer" instance=ExtResource("10_m3ecr")]
metadata/_edit_use_anchors_ = true

[node name="ParallaxController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00107002, 0.0518789, -0.024394)
script = ExtResource("14_8tmhg")

[node name="fundo_1" type="Sprite3D" parent="ParallaxController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.00874, 0.271517, -2)
texture_filter = 0
texture = ExtResource("14_a2xc8")

[node name="fundo_2" type="Sprite3D" parent="ParallaxController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.00819, 0.271, -2.01)
texture_filter = 0
texture = ExtResource("15_trfxh")

[node name="fundo_3" type="Sprite3D" parent="ParallaxController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.00919, 0.271, -2.02)
texture_filter = 0
texture = ExtResource("16_mlxwt")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_py83u")
volume_db = -25.0
autoplay = true

[node name="Node3D2" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.898794, 0.438371, 0, -0.438371, 0.898794, -1.38039, 0.397952, -0.974593)

[node name="pedro" type="Sprite3D" parent="Node3D2"]
texture_filter = 0
texture = ExtResource("15_mlyws")
